tests/negative/parse_error.sans
// expect-error: PARSE ERR
main() I {
  x:I = 42
  x
}
